# bitvm2-splitter

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.config/: nextest.toml
.github/workflows/: rust.yaml
bitcoin-scriptexec/src/: data_structures.rs  lib.rs  main.rs  signatures.rs  wasm.rs
bitcoin-splitter/: Cargo.toml  README.md
bitcoin-splitter/src/: debug.rs  lib.rs  pseudo.rs  utils.rs
bitcoin-splitter/src/bitvm/: mod.rs
bitcoin-splitter/src/bitvm/hash/: sha256.rs  utils.rs
bitcoin-splitter/src/bitvm/u32/: u32_add.rs  u32_rrot.rs  u32_zip.rs
bitcoin-splitter/src/split/: core.rs  intermediate_state.rs  mod.rs  script.rs  tests.rs
bitcoin-splitter/src/test_scripts/: int_add.rs  int_mul.rs  int_mul_karatsuba.rs  int_mul_windowed.rs  mod.rs  sha256.rs
bitcoin-testscripts/: Cargo.toml  README.md
bitcoin-testscripts/src/: int_add.rs  int_mul_karatsuba.rs  int_mul_windowed.rs  lib.rs  sha256.rs  square_fibonacci.rs  tests.rs  u29mul.rs  u32mul.rs
bitcoin-testscripts/src/bitvm/: mod.rs
bitcoin-testscripts/src/bitvm/bigint/: add.rs  bits.rs  cmp.rs  inv.rs  mul.rs  std.rs  sub.rs  u29x9.rs  u32x8.rs
bitcoin-testscripts/src/bitvm/bn254/: fp254impl.rs  fq.rs  mod.rs  utils.rs
bitcoin-testscripts/src/bitvm/hash/: sha256.rs  utils.rs
bitcoin-testscripts/src/bitvm/u32/: u32_add.rs  u32_and.rs  u32_rrot.rs  u32_std.rs  u32_xor.rs  u32_zip.rs
bitcoin-utils/: Cargo.toml
bitcoin-utils/src/: comparison.rs  debug.rs  lib.rs  pseudo.rs
bitcoin-winternitz/: Cargo.toml
bitcoin-winternitz/src/: lib.rs  u32.rs
configs/: bitcoind.conf
core/: Cargo.toml
core/src/: debug.rs  lib.rs  utils.rs  winternitz.rs
core/src/assert/: disprove_script.rs  mod.rs  payout_script.rs  signing.rs  tests.rs
core/src/disprove/: mod.rs  signing.rs  tests.rs
docs/paper/: bitvm2_fast_recap.tex  iacrtrans.cls  nero.tex  refs.bib  settings.tches.tex  settings.tosc.tex
docs/recap/: bitvm2_fast_recap.tex
integration-tests/: Cargo.toml
integration-tests/src/: fetch_balance.rs  lib.rs  taproot.rs
integration-tests/src/common/: mod.rs
splitter/: Cargo.toml
splitter/src/: debug.rs  lib.rs  pseudo.rs  utils.rs
splitter/src/bitvm/: mod.rs
splitter/src/bitvm/hash/: mod.rs  sha256.rs  utils.rs
splitter/src/bitvm/u32/: mod.rs  u32_add.rs  u32_and.rs  u32_rrot.rs  u32_std.rs  u32_xor.rs  u32_zip.rs
splitter/src/split/: core.rs  intermediate_state.rs  mod.rs  script.rs  tests.rs
splitter/src/test_scripts/: int_add.rs  int_mul.rs  mod.rs  sha256.rs
splitter/src/test_scripts/sha256/: mod.rs
