[package]
name    = "bitcoin-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bitcoin Libraries
bitcoin              = { workspace = true, features = ["rand-std"]}
bitcoin-script       = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin-scriptexec   = { path = "../bitcoin-scriptexec" }

# BitVM scripts
bitcoin-utils      = { path = "../bitcoin-utils" }

# General-purpose libraries
indicatif      = "0.17.8" # Progress bar
