[package]
name    = "bitcoin-testscripts"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bitcoin Libraries
bitcoin            = { workspace = true, features = ["rand-std"]}
bitcoin-script     = { git = "https://github.com/BitVM/rust-bitcoin-script" }

# BitVM scripts
bitcoin-window-mul = { git = "https://github.com/distributed-lab/bitcoin-window-mul.git" }
bitcoin-splitter   = { path = "../bitcoin-splitter" }
bitcoin-utils      = { path = "../bitcoin-utils" }

# General-purpose libraries
paste = "1.0.15"

# Crypto libraries
hex        = "0.4.3"
sha2       = "0.10.8"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.18"
# For finite field arithmetic
ark-ff     = { version = "0.4.0" }
ark-bn254  = { version = "0.4.0", features = ["curve"], default-features = false }
ark-std =    { version = "0.4.0", default-features = false, features = ["print-trace"] }

# Random libraries
rand_chacha = "0.3.1"
rand        = "0.8.5"
