[package]
name    = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
bitcoincore-rpc = "0.17.0"
bitcoin = { workspace = true, features = [ "std", "serde" ] }
color-eyre = "0.6.3"
eyre = "0.6.12"
ini = { version = "0.21.1", package = "rust-ini", default-features = false }
once_cell = "1.19.0"
serde_json = "1.0.128"
serde = "1.0.194"
tracing.workspace = true
tracing-subscriber.workspace = true