[package]
name = "splitter"
version = "0.1.0"
edition = "2021"

[dependencies]

# Bitcoin Libraries
bitcoin              = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std"]}
bitcoin-script       = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin-scriptexec   = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec/"}
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack"}

# Other Libraries
strum = "0.26"
strum_macros = "0.26"
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"
paste = "1.0"
seq-macro = "0.3.5"

[dev-dependencies]
rand_chacha = "0.3.1"
rand = "0.8.5"
num-bigint = { version = "0.4.4", features = ["rand"] }
ark-std = "0.4.0"
konst = "0.3.9"

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[patch.crates-io.base58check]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-io]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-units]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"